<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/tooltip"
        android:textColor="@color/material_dynamic_neutral60"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="@+id/gridLayout" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgViewStan"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:contentDescription="@string/stan"
            android:onClick="showCharacterDetails"
            android:tag="stan"
            app:srcCompat="@drawable/stanmarsh" />

        <ImageView
            android:id="@+id/imgViewKyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:contentDescription="@string/kyle"
            android:onClick="showCharacterDetails"
            android:src="@drawable/kylebroflovski"
            android:tag="kyle" />

        <ImageView
            android:id="@+id/imgViewEric"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:contentDescription="@string/eric"
            android:onClick="showCharacterDetails"
            android:tag="eric"
            app:srcCompat="@drawable/ericcartman" />

        <ImageView
            android:id="@+id/imgViewKenny"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:contentDescription="@string/kenny"
            android:onClick="showCharacterDetails"
            android:src="@drawable/kennymccormick"
            android:tag="kenny" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>